tile and header set up

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Life bytes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>My Life Bytes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="stylesheet" href="asset/fonts/icomoon/style.css">
+
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/jquery-ui.css">
+  <link rel="stylesheet" href="./assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="./assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="./assets/owl.theme.default.min.css">
+
+  <link rel="stylesheet" href="./assets/css/jquery.fancybox.min.css">
+
+  <link rel="stylesheet" href="./assets/css/bootstrap-datepicker.css">
+
+  <link rel="stylesheet" href="./assets/fonts/flaticon/font/flaticon.css">
+
+  <link rel="stylesheet" href="./assets/css/aos.css">
+  <link href="./assets/css/jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
+ -->
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
